Create a bind mount so that  folder maps to the  directory in the docker container

--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -4,6 +4,10 @@ services:
       build: ./ros1_base
       image: ros1_base
       container_name: ros1_base
+      volumes:
+        - type: bind
+          source: ../ros_workspace
+          target: /home
       networks:
         - rosnet
       tty: true
