--- a/catkin_ws/src/example_package/CMakeLists.txt
+++ b/catkin_ws/src/example_package/CMakeLists.txt
@@ -163,7 +163,7 @@ include_directories(
 #   scripts/my_python_script
 #   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 # )
-catkin_install_python(PROGRAMS scripts/talker.py scripts/listener.py
+catkin_install_python(PROGRAMS scripts/talker.py scripts/listener.py scripts/listener2.py scripts/talker2.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
