--- a/catkin_ws/src/navigator_package/package.xml
+++ b/catkin_ws/src/navigator_package/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>example_package</name>
+  <name>navigator_package</name>
   <version>0.0.0</version>
-  <description>The example_package package</description>
+  <description>The navigator_package package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
