--- a/catkin_ws/src/navigator_package/CMakeLists.txt
+++ b/catkin_ws/src/navigator_package/CMakeLists.txt
@@ -163,7 +163,7 @@ include_directories(
 #   scripts/my_python_script
 #   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 # )
-catkin_install_python(PROGRAMS scripts/navigationTalker.py scripts/positionListener.py scripts/sensorListener.py
+catkin_install_python(PROGRAMS scripts/navigationTalker.py scripts/positionListener.py scripts/sensorListener.py scripts/frontCenterLaserListener.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
