--- a/catkin_ws/src/IMU/package.xml
+++ b/catkin_ws/src/IMU/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>IMU</name>
+  <name>imu</name>
   <version>0.0.0</version>
   <description>The IMU package</description>
 
