--- a/catkin_ws/src/battery/package.xml
+++ b/catkin_ws/src/battery/package.xml
@@ -10,11 +10,14 @@
     <author email="ucabz09@ucl.ac.uk">Ziwei Lin</author>
   
     <buildtool_depend>catkin</buildtool_depend>
-  
-    <build_depend>rospy</build_depend>
-    <build_depend>std_msgs</build_depend>
-  
-    <exec_depend>rospy</exec_depend>
-    <exec_depend>std_msgs</exec_depend>
+	  <build_depend>rospy</build_depend>
+	  <build_depend>sensor_msgs</build_depend>
+	  <build_depend>std_msgs</build_depend>
+	  <build_export_depend>rospy</build_export_depend>
+	  <build_export_depend>sensor_msgs</build_export_depend>
+	  <build_export_depend>std_msgs</build_export_depend>
+	  <exec_depend>rospy</exec_depend>
+	  <exec_depend>sensor_msgs</exec_depend>
+	  <exec_depend>std_msgs</exec_depend>
   
   </package>
