--- a/catkin_ws/src/control_utils/CMakeLists.txt
+++ b/catkin_ws/src/control_utils/CMakeLists.txt
@@ -104,7 +104,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
+#  INCLUDE_DIRS include
   LIBRARIES control_utils
   CATKIN_DEPENDS roscpp rospy std_msgs message_runtime
 #  DEPENDS system_lib
@@ -207,7 +207,7 @@ include_directories(
 # catkin_add_nosetests(test)
 catkin_install_python(
         PROGRAMS
-        scripts/control_utils.py scripts/terminal_publisher.py scripts/boat_teleop_key.py
+        scripts/control_utils.py scripts/boat_teleop_key.py
         DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
